fix java version problems